@@ -18,7 +18,8 @@ import java.io.InputStreamReader;
 import java.net.MalformedURLException;
 import java.net.Socket;
 import java.net.SocketAddress;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Locale;
 
 import net.i2p.I2PAppContext;
@@ -115,18 +116,16 @@ public class UrlLauncher implements ClientApp {
      *  @return success
      */
     private static boolean waitForServer(String urlString) {
-        URL url;
+        URI url;
         try {
-            url = new URL(urlString);
-        } catch (MalformedURLException e) {
+            url = new URI(urlString);
+        } catch (URISyntaxException e) {
             return false;
         }
         String host = url.getHost();
         int port = url.getPort();
         if (port <= 0) {
-            port = url.getDefaultPort();
-            if (port <= 0)
-                return false;
+            port = "https".equals(url.getScheme()) ? 443 : 80;
         }
         SocketAddress sa;
         try {
@@ -150,7 +149,7 @@ public class UrlLauncher implements ClientApp {
                    Thread.sleep(2*1000);
                 } catch (InterruptedException ie) {}
                 return true;
-            } catch (Exception e) {}
+            } catch (IOException e) {}
             if (System.currentTimeMillis() > done)
                 break;
             try {
@@ -172,9 +171,9 @@ public class UrlLauncher implements ClientApp {
      * @return     <code>true</code> if the operation was successful, otherwise
      *             <code>false</code>.
      * 
-     * @throws Exception
+     * @throws IOException
      */ 
-    public boolean openUrl(String url) throws Exception {
+    public boolean openUrl(String url) throws IOException {
         waitForServer(url);
         if (validateUrlFormat(url)) {
             String cbrowser = _context.getProperty(PROP_BROWSER);
@@ -218,7 +217,7 @@ public class UrlLauncher implements ClientApp {
                         // No worries.
                     }
                     foo.delete();
-                } catch (Exception e) {
+                } catch (IOException e) {
                     // Defaults to IE.
                 } finally {
                     if (bufferedReader != null)
@@ -247,9 +246,9 @@ public class UrlLauncher implements ClientApp {
      * @return         <code>true</code> if the operation was successful,
      *                 otherwise <code>false</code>.
      * 
-     * @throws Exception
+     * @throws IOException
      */
-    public boolean openUrl(String url, String browser) throws Exception {
+    public boolean openUrl(String url, String browser) throws IOException {
         waitForServer(url);
         if (validateUrlFormat(url)) {
             if (_shellCommand.executeSilentAndWaitTimed(browser + " " + url, 5))
@@ -261,8 +260,8 @@ public class UrlLauncher implements ClientApp {
     private static boolean validateUrlFormat(String urlString) {
          try {
             // just to check validity
-            new URL(urlString);
-        } catch (MalformedURLException e) {
+            new URI(urlString);
+        } catch (URISyntaxException e) {
             return false;
         }
         return true;
@@ -290,7 +289,7 @@ public class UrlLauncher implements ClientApp {
                 String url = _args[0];
                 openUrl(url);
                 changeState(STOPPED);
-            } catch (Exception e) {
+            } catch (IOException e) {
                 changeState(CRASHED, e);
             }
         }
@@ -355,6 +354,6 @@ public class UrlLauncher implements ClientApp {
                 launcher.openUrl(args[0]);
             else
                 launcher.openUrl("http://127.0.0.1:7657/index.jsp");
-         } catch (Exception e) {}
+         } catch (IOException e) {}
     }
 }
